# b01-zola

./: .gitignore  Dockerfile  config.toml  docker-compose.yaml  docker-compose.yml
.github/workflows/: docker-image.yaml  docker-image.yml
backend/: CLAUDE.md  Cargo.toml  Dockerfile
backend/migrations/: 20251115082259_create_comments_Table.sql
backend/src/: main.rs
content/: _index.md  now.md
content/blog/: _index.md  hello-world.md  lazy-tool-loading-mcp.md  perfumes.md  rewriting-nostd.md
site/: Dockerfile  config.toml
site/content/: about.md
site/content/blog/: _index.md  perfumes.md
site/static/: oauth-test.html
site/static/css/: style.css
site/static/favicon/: site.webmanifest
site/templates/: about.html  blog-post.html  header.html  now.html  resume.html
static/: auth-callback.html
static/css/: style.css
templates/: about.html  base.html  blog-post.html  blog.html  header.html  index.html  projects.html  sitemap.html  taxonomy_list.html  taxonomy_single.html
