[package]
name = "b01-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors"] }
ureq = { version = "3", features = ["json"] }
